# programming

./: .gitignore  .swp  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb  Untitled6.ipynb  Untitled7.ipynb  Untitled8.ipynb  bridgekeeper.py  find-files.py  match_chars  match_chars.py  test_bash.sh  update-esxi-final.py
ansible/: .test.tf  ansible.cfg  tests.txt
bash/: .bashrc  OCM_gps_upgrade  OCM_gps_upgrade.sh.bkup  OCM_gps_upgrade.sh.nocomment  add-local-user  backup  bin  check-hosts.sh  cleanup-lines  cleanup-lines.sh  configure-firewall.sh.bkup  convert_time.sh  enable_nfs_mount.sh  for-test  function_test  gdrive_export.sh  gdrive_import  generate-password.sh  generate-seed  generate-user-passwords  generate-user-passwords.sh.bkup  get-content.sh  get-locaiton  get_total_files.sh  getopt-test  getopts_test  inputscript.sh  line-graph.sh  location  make-colorful  make-executable  one_output.sh  path_test.sh  process_args  push-profile  read-graph.sh  remind_hodo.sh  scan-network  sed_preppend_and_and_to_pattern_range  shell-screensaver.sh  (+3 more)
configs/: .bashrc  .zprofile  init.lua  tmux.conf  user-settings.json  vault.yml  vimrc
containers/: Dockerfile  build.sh
distilled-lessons/: ansible
powershell/: make-domain-admin.ps1
python/: .container_volume.py.swp  .netbox_api.ipynb.swp  .swp  FileDiff.ipynb  Untitled.ipynb  addtwonumbers.py  blackjack.py  char_test  container_volume.py  convert.py  convert2.py  cql_generation.ipynb  find-files.py  (+15 more)
python/update-linux-aide/: pyproject.toml  update-linux-aide.py
(+418 files in other folders)
